# RN-Praxis-3

./: CMakeLists.txt  README.md  book_1.txt  test_complex_text.txt  test_simple_text.txt  zmq_distributor.c  zmq_worker.c
test/: test_praxis3.py  test_small_book.py
